--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Stardust</name>
-	<comment>Project Stardust created by Buildship.</comment>
+	<name>Stardust-Improved</name>
+	<comment>Project Stardust-Improved created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1613084097066</id>
+			<id>1613245403071</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
